Fixed IE11 flex collapse bug. Removed unnecessary burger menu.

--- a/styles/layout/_about.scss
+++ b/styles/layout/_about.scss
@@ -10,6 +10,7 @@ h1 {
     margin-top: 80px;
     .about-page-intro {
       display: flex;
+      flex: 1 1 auto;
       justify-content: center;
       .about-page-text {
         height: 100%;
@@ -22,6 +23,7 @@ h1 {
     padding-bottom: 100px;
     margin-top: 80px;
     display: flex;
+    flex: 1 1 auto;
     flex-direction: column;
     justify-content: center;
     .our-numbers-subtitle {
@@ -31,11 +33,13 @@ h1 {
       justify-content: center;
       .stat-col {
         display: flex;
+        flex: 1 1 auto;
         justify-content: center;
         .stat {
           padding-top: 50px;
           padding-bottom: 50px;
           display: flex;
+          flex: 1 1 auto;
           flex-direction: column;
           justify-content: center;
           align-items: center;
@@ -51,6 +55,7 @@ h1 {
   }
   .img-container {
     display: flex;
+    flex: 1 1 auto;
     flex-direction: row;
     justify-content: center;
     margin-top: 50px;
@@ -69,6 +74,7 @@ h1 {
     .process-row {
       margin-top: 50px;
       display: flex;
+      flex: 1 1 auto;
       flex-direction: row;
       @media #{$sm-only} {
         margin-top: 0px;
@@ -97,6 +103,7 @@ h1 {
 
   .end-mark-col {
     display: flex;
+    flex: 1 1 auto;
     justify-content: center;
     margin-top: 50px;
   }
@@ -110,6 +117,7 @@ h1 {
 .our-numbers-title,
 .our-numbers-subtitle {
   display: flex;
+  flex: 1 1 auto;
   justify-content: center;
 }
 
