--- a/styles/layout/_learn_more.scss
+++ b/styles/layout/_learn_more.scss
@@ -5,6 +5,7 @@
   .learn-more-left,
   .learn-more-right {
     display: flex;
+    flex: 1 1 auto;
     flex-direction: column;
   }
   .learn-more-title {
