--- a/styles/layout/_news.scss
+++ b/styles/layout/_news.scss
@@ -1,5 +1,6 @@
 .news-header {
   display: flex;
+  flex: 1 1 auto;
   align-items: center;
   justify-content: center;
   height: 40px;
