--- a/styles/layout/_post.scss
+++ b/styles/layout/_post.scss
@@ -24,6 +24,7 @@
     align-items: center;
     .post-col {
       display: flex;
+      flex: 1 1 auto;
       justify-content: center;
       .post-title {
         margin-bottom: 20px;
@@ -46,6 +47,7 @@
     }
     .text-break-col {
       display: flex;
+      flex: 1 1 auto;
       justify-content: center;
       .text-break {
         height: 5px;
